package Enums;
import Enums.*;
import FileHandling.*;
import Members.*;
import Result.*;
import UI.*;


public enum SwimmingDisciplines {
    CRAWL,
    BRYSTSVØMNING,
    BUTTERFLY,
    RYGCRAWL,
    HUNDESVØMNING,
    UDSPRING;
}
