public class TrainingResult extends Result {
    public TrainingResult(String date, double timeResult, int swimmerID, SwimmingDisciplines swimmingDiscipline) {
        super(date, timeResult, swimmerID, swimmingDiscipline);
    }
}
